--- a/src/Components/WebAssembly/testassets/StandaloneApp/Pages/Counter.razor
+++ b/src/Components/WebAssembly/testassets/StandaloneApp/Pages/Counter.razor
@@ -1,16 +1,24 @@
 ﻿@page "/counter"
+@using Microsoft.JSInterop
+@inject IJSRuntime JS
 
-<h1>Counter</h1>
-
-<p>Current count: @currentCount</p>
-
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<input type="text"
+       @ref="_inputReference"
+       @onchange="ChangeHandler" />
 
 @code {
-    int currentCount = 0;
+    private ElementReference _inputReference;
 
-    void IncrementCount()
+    protected override void OnAfterRender(bool firstRender)
     {
-        currentCount++;
+        if (firstRender)
+        {
+            JS.InvokeVoidAsync("myTriggerChange", _inputReference);
+        }
+    }
+
+    void ChangeHandler()
+    {
+        Console.WriteLine("Changed");
     }
 }
